@@ -1,3 +1,9 @@
+1998-06-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* callbacks.c: let conversion callback handle erroneus values.
+	* ghex.h, ui.c : minor changes to Converter structure and
+	create_converter() function.
+	
 1998-06-18  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* hex-document.c: put "Group Data As" menu back to document's
